chore: update scss syntax (#68)
* fix(scss): update scss syntax

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: remove DEPRECATED [mixed-decls] warnings

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use dart scss transpiler

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use dart scss transpiler

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use dart scss transpiler

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use sass embedded for dev

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: move from devDependencies to prod

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use also sass-embedded in netlify

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use global definition for ul-reset

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: only update hugo version in netlify.toml

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* fix: use additional npm script

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

* Specify recommended node version

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

* Merge media queries

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

* Bump versions

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

* Remove gist shortcode, update twitter to X shortcode

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

* Fix typos, add new example sites

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

---------

Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>
Co-authored-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_accordion.scss
+++ b/assets/scss/_accordion.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .accordions {
     display: flex;
     flex-direction: column;
@@ -22,10 +24,6 @@
 
             line-height: 26px;
             font-size: 20px;
-            @media (min-width: $min-desktop) {
-                font-size: 30px;
-                line-height: 50px;
-            }
             text-transform: none;
             color: var(--text-color);
             font-family: var(--rounded-font-family);
@@ -34,7 +32,9 @@
             padding-top: 34px;
             padding-bottom: 34px;
             margin-inline-end: 34px;
-            @media (min-width: $min-desktop) {
+            @media (min-width: variables.$min-desktop) {
+                font-size: 30px;
+                line-height: 50px;
                 padding-top: 40px;
                 padding-bottom: 40px;
                 margin-inline-end: 40px;
@@ -76,10 +76,10 @@
 
         .accordion__content {
             margin-bottom: 34px;
-            @media (min-width: $min-desktop) {
+            opacity: 1;
+            @media (min-width: variables.$min-desktop) {
                 margin-bottom: 40px;
             }
-            opacity: 1;
         }
     }
 }
