--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -1,10 +1,12 @@
+@use "variables";
+
 .blog-item {
     margin-bottom: 50px;
     &:first-of-type {
         margin-top: 50px;
     }
 
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-bottom: 80px;
     }
     &__title {
@@ -23,15 +25,15 @@
             color: var(--text-color);
             font-family: var(--rounded-font-family);
             font-size: 14px;
-            @media (min-width: 600px) {
-                font-size: 16px;
-            }
             font-style: normal;
             font-weight: 700;
             line-height: 150%;
             letter-spacing: 2.1px;
             text-transform: uppercase;
             margin-right: 5px;
+            @media (min-width: 600px) {
+                font-size: 16px;
+            }
         }
         svg {
             fill: var(--primary-400);
