--- a/assets/scss/_breadcrumb.scss
+++ b/assets/scss/_breadcrumb.scss
@@ -1,11 +1,13 @@
+@use "variables";
+
 .breadcrumbs {
     margin-block-start: 70px;
     margin-block-end: 0;
-    @media (min-width: $desktop-width) {
+    font-family: var(--rounded-font-family);
+    @media (min-width: variables.$desktop-width) {
         margin-block-start: 100px;
         margin-block-end: 0;
     }
-    font-family: var(--rounded-font-family);
 }
 
 .breadcrumbs-list {
@@ -20,9 +22,6 @@
 
 .breadcrumb {
     font-size: 14px;
-    @media (min-width: 600px) {
-        font-size: 16px;
-    }
     font-style: normal;
     font-weight: 700;
     line-height: 150%;
@@ -31,6 +30,9 @@
     a {
         text-decoration: none;
         color: var(--gray-800);
+    }
+    @media (min-width: 600px) {
+        font-size: 16px;
     }
 }
 
@@ -45,7 +47,7 @@
 .breadcrumbs + .h1 {
     margin-block-start: 20px;
     margin-block-end: 50px;
-    @media (min-width: $desktop-width) {
+    @media (min-width: variables.$desktop-width) {
         margin-block-start: 50px;
         margin-block-end: 80px;
     }
